Fixed issue where search/clear icon was squished by input

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -29,7 +29,7 @@
 }
 
 .searchbar {
-    width: 100%;
+    flex-grow: 1;
     background: none;
     padding: 8px 0px;
 }
